@@ -49,6 +49,7 @@ https://github.com/elastic/beats/compare/v5.0.0-alpha3...master[Check the HEAD d
 *Affecting all Beats*
 
 - Periodically log internal metrics. {pull}1955[1955]
+- Add enable-setting to all output modules. {pull}1987[1987]
 
 *Metricbeat*
 
